--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -11,22 +11,20 @@
                     <h3>Iced is better than hot, but they're both good</h3>
                     <h4>"I am going to have a heart attack by age 25!"</h4>
 
-                    <p>There is no specific message or reasoning to this site, I just wanted - as a apprentice barista - to share my love for coffee. Please enjoy my stock photo of coffee. I am drinking coffee at 7PM while typing this code and I will be drinking coffee at 7AM at work tomorrow</p>
+                    <p>There is no specific message or reasoning to this site, I just wanted - as a apprentice barista - to share my love for coffee. Please enjoy my stock photo of coffee. I am drinking coffee at 7PM while typing this code and I will be drinking coffee at 7AM at work tomorrow.</p>
 
                     <p>Here, I will be posting a stock image of coffee, as well as linking the coffee shop I currently work at (tell your friends).</p>
 
-                    <a href="https://frothymonkey.com" target="_blank" The coffee shop I work at</a>
+                    <a href="https://frothymonkey.com" target="_blank">The coffee shop I work at</a><br><br>
 
-                    <img src="pexels-tyler-nix-2396220.jpg"
+                    <img src="the one.png" alt="Frothy Monkey">
 
-                    <ul>
+                        <ul>
                         <li>I will not go to Starbucks</li>
                         <li>Dunkin has good coffee but their food makes me sick</li>
                         <li>I own a Ninja Hot & Cold Brewed System which is servicable</li>
                         <li>Frothy Monkey has spoiled me forever with unlimited free coffee</li>
-                        
-
-</ul>
+                        </ul>
 
                     <p>&copy; 2021 Lab 2 Basic HTML Structure - Coffee Website</p>
                 </body>
