--- a/Lab 3/about.html
+++ b/Lab 3/about.html
@@ -15,14 +15,14 @@
                     <a href="about.html">About Cats</a>
                     </nav>
                     <main>
-                        <h2>Welcome to Random Cats</h2>
-                        <p>Welcome to Random Cats. Here, I will be posting random cat photos from Pexels.com. Please enjoy the photo of the cat.</p>
+                        <h2>About Random Cats</h2>
+                        <p>I don't actually know, or claim to know anything deeper about cats. They vomit a lot.</p>
 
-                        <p>I have two of my own cats I could be using images of - however, I do not feel like finding any images of them. So you get stock photos</p>
+                        <p>Here's another cat photo.</p>
                     <footer></footer>
-<img src="pexels-wojciech-kumpicki-2071882.jpg" alt="Random Cats" width="650" height="600">
+<img src="cat2.jpg" alt="Random Cats" width="650" height="600">
                     
-<p>Not sure what else to write here, honestly.</p>
+<p>Cats are pretty cool.</p>
 </main>
 <footer>
     <p>&copy; 2021 Lab 3 - Random Cat Site</p>
