--- a/Lab 3/about.html
+++ b/Lab 3/about.html
@@ -12,7 +12,7 @@
                 </header>
                 <nav>
                     <a href="index.hmtl">Home</a>
-                    <a href="home.html">About Cats</a>
+                    <a href="index.html">About Cats</a>
                     </nav>
                     <main>
                         <h2>About Random Cats</h2>
