--- a/Lab 3/about.html
+++ b/Lab 3/about.html
@@ -12,15 +12,19 @@
                 </header>
                 <nav>
                     <a href="index.hmtl">Home</a>
-                    <a href="index.html">About Cats</a>
+                    <a href="about.html">About Cats</a>
                     </nav>
                     <main>
                         <h2>About Random Cats</h2>
                         <p>I don't actually know, or claim to know anything deeper about cats. They vomit a lot.</p>
 
-                        <p>Here's another cat photo.</p>
+                        <p>Some cat breeds:</p>
+                        <li>Persian</li>
+                        <li>Tabby</li>
+                        <li>Ragdoll</li>
+                        
                     <footer></footer>
-<img src="cat2.jpg" alt="Random Cats" width="650" height="600">
+<img src="cat2.jpg" alt="Random Cats" width="650" height="700">
                     
 <p>Cats are pretty cool.</p>
 </main>
