--- a/Lab 3/about.html
+++ b/Lab 3/about.html
@@ -29,7 +29,7 @@
 <p>Cats are pretty cool.</p>
 </main>
 <footer>
-    <p>&copy; 2021 Lab 3 - Random Cat Site - <a href="https://en.wikipedia.org/wiki/List_of_cat_breeds/">More Information</a></p>
+    <p>&copy; 2021 Lab 3 - Random Cat Site - <a href="https://en.wikipedia.org/wiki/List_of_cat_breeds/" target=_blank">More Information</a></p>
 </footer>
 
 
