--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lab 3 - Basic HTML and HTML Semantics</title>
+        <link rel="style"sheet" href="normalize.css">
         </head>
         <body>
 
