--- a/Lab 4/about.html
+++ b/Lab 4/about.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lab 3 - Basic HTML and HTML Semantics</title>
+        <title>Lab 4 - Introduction to CSS</title>
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href=css/styles.css">
         </head>
         <body>
-
+            <div id="container">
             <header>
                 <h1>Random Cats</h1>
                 </header>
@@ -24,13 +26,10 @@
                         <li>Ragdoll</li>
                         
                     <footer></footer>
-<img src="cat2.jpg" alt="Random Cats" width="650" height="700">
+<img src="cat2.jpg" alt="Random Cats" 
                     
 <p>Cats are pretty cool.</p>
 </main>
-<footer>
     <p>&copy; 2021 Lab 3 - Random Cat Site - <a href="https://en.wikipedia.org/wiki/List_of_cat_breeds/" target=_blank">More Information</a></p>
-</footer>
-
-
+</div>
 </html>
