--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lab 3 - Basic HTML and HTML Semantics</title>
-        <link rel="style"sheet" href="normalize.css">
+        <title>Lab 4 - Introduction to CSS</title>
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href=css/styles.css">
         </head>
         <body>
-
+            <div id="container">
             <header>
                 <h1>Random Cats</h1>
                 </header>
@@ -21,13 +22,10 @@
 
                         <p>I have two of my own cats I could be using images of - however, I do not feel like finding any images of them. So you get stock photos</p>
                     <footer></footer>
-<img src="pexels-wojciech-kumpicki-2071882.jpg" alt="Random Cats" width="650" height="600">
+<img src="pexels-wojciech-kumpicki-2071882.jpg" alt="Random Cats"
                     
 <p>Not sure what else to write here, honestly.</p>
 </main>
-<footer>
     <p>&copy; 2021 Lab 3 - Random Cat Site</p>
-</footer>
-
-
+</div>
 </html>
