--- a/Lab 4/about.html
+++ b/Lab 4/about.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lab 4 - Introduction to CSS</title>
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href=css/styles.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css">
         </head>
         <body>
             <div id="container">
