--- a/Lab 4/about.html
+++ b/Lab 4/about.html
@@ -13,7 +13,7 @@
                 <h1>Random Cats</h1>
                 </header>
                 <nav>
-                    <a href="index.hmtl">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About Cats</a>
                     </nav>
                     <main>
