--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -24,7 +24,7 @@
                     <footer></footer>
 <img src="pexels-wojciech-kumpicki-2071882.jpg" alt="Random Cats"
                     
-    p>Not sure what else to write here, honestly.</p>
+    <p>Not sure what else to write here, honestly.</p>
 </main>
     <p>&copy; 2021 Lab 3 - Random Cat Site</p>
 </div>
