--- a/Lab 4/about.html
+++ b/Lab 4/about.html
@@ -26,7 +26,7 @@
                         <li>Ragdoll</li>
                         
                     <footer></footer>
-<img src="cat2.jpg" alt="Random Cats" 
+<img src="cat2.jpg" alt="Random Cats"> 
                     
 <p>Cats are pretty cool.</p>
 </main>
