--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -22,9 +22,9 @@
 
                         <p>I have two of my own cats I could be using images of - however, I do not feel like finding any images of them. So you get stock photos</p>
                     <footer></footer>
-<img src="pexels-wojciech-kumpicki-2071882.jpg" alt="Random Cats"
+<img src="pexels-wojciech-kumpicki-2071882.jpg" alt="Random Cats">
                     
-    <p>Not sure what else to write here, honestly.</p>
+<p>Not sure what else to write here, honestly.</p>
 </main>
     <p>&copy; 2021 Lab 3 - Random Cat Site</p>
 </div>
