--- a/Lab 4/about.html
+++ b/Lab 4/about.html
@@ -20,16 +20,18 @@
                         <h2>About Random Cats</h2>
                         <p>I don't actually know, or claim to know anything deeper about cats. They vomit a lot.</p>
 
+                        <ul>
                         <p>Some cat breeds:</p>
                         <li>Persian</li>
                         <li>Tabby</li>
                         <li>Ragdoll</li>
-                        
-                    <footer></footer>
+                        </ul>
 <img src="cat2.jpg" alt="Random Cats"> 
                     
 <p>Cats are pretty cool.</p>
 </main>
-    <p>&copy; 2021 Lab 3 - Random Cat Site - <a href="https://en.wikipedia.org/wiki/List_of_cat_breeds/" target=_blank">More Information</a></p>
+<footer>
+    <p>&copy; 2021 Lab 3 - Random Cat Site - <a href="https://en.wikipedia.org/wiki/List_of_cat_breeds/" target="_blank">More Information</a></p>
+    </footer>
 </div>
 </html>
