--- a/Lab 4/about.html
+++ b/Lab 4/about.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lab 3 - Basic HTML and HTML Semantics</title>
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href=css/styles.css">
         </head>
         <body>
-
+            <div id="container">
             <header>
                 <h1>Random Cats</h1>
                 </header>
@@ -32,5 +34,5 @@
     <p>&copy; 2021 Lab 3 - Random Cat Site - <a href="https://en.wikipedia.org/wiki/List_of_cat_breeds/" target=_blank">More Information</a></p>
 </footer>
 
-
+</div>
 </html>
