--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lab 3 - Basic HTML and HTML Semantics</title>
-        <link rel="style"sheet" href="normalize.css">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href=css/styles.css">
         </head>
         <body>
-
+            <div id="container">
             <header>
                 <h1>Random Cats</h1>
                 </header>
@@ -29,5 +30,5 @@
     <p>&copy; 2021 Lab 3 - Random Cat Site</p>
 </footer>
 
-
+</div>
 </html>
