--- a/Mid-Term/index.html
+++ b/Mid-Term/index.html
@@ -11,7 +11,7 @@
             <div id="container">
             <header>
                 <img src="stardewvalleylogo.png"
-                </header>
+                ></header>
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
@@ -21,9 +21,9 @@
                     <main>
                         <h2>Welcome to Stardew Valley!</h2>
                         <p>Welcome to my Stardew Valley fansite, dedicated to the 2016 indie smash hit.</p>
-                        <img src="sdvw.png" width="950" height="400">
+                        <img src="sdvw.png" alt= "Stardew Valley"> <width="950" height="400">
                         
-                    <footer><p>I just discovered this game in the last month, but it has very quickly left an immesurable impact on me. 
+                    <p>I just discovered this game in the last month, but it has very quickly left an immesurable impact on me. 
                         </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p></footer>
                     
 </main>
