--- a/Mid-Term/index.html
+++ b/Mid-Term/index.html
@@ -10,7 +10,7 @@
         <body>
             <div id="container">
             <header>
-                <img src="stardewvalleylogo.png"
+                <img src="stardewvalleylogo.png" alt="Logo">
                 ></header>
                 <nav>
                     <a href="index.html">Home</a>
@@ -21,12 +21,12 @@
                     <main>
                         <h2>Welcome to Stardew Valley!</h2>
                         <p>Welcome to my Stardew Valley fansite, dedicated to the 2016 indie smash hit.</p>
-                        <img src="sdvw.png" alt= "Stardew Valley"> <width="950" height="400">
+                        <img src="sdvw.png" alt= "Stardew Valley"> <width="950"> <height="400">
                         
                     <p>I just discovered this game in the last month, but it has very quickly left an immesurable impact on me. 
-                        </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p></footer>
+                        </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p>
                     
-</main>
+
 <footer>
     <p>&copy; 2021 Mid-Term - Stardew Valley Site</p>
 </footer>
