--- a/Mid-Term/index.html
+++ b/Mid-Term/index.html
@@ -21,7 +21,7 @@
                     <main>
                         <h2>Welcome to Stardew Valley!</h2>
                         <p>Welcome to my Stardew Valley fansite, dedicated to the 2016 indie smash hit.</p>
-                        <img src="sdvw.png" alt= "Stardew Valley"> <width="950"> <height="400">
+                        <img src="sdvw.png" alt= "Stardew Valley"> 
                         
                     <p>I just discovered this game in the last month, but it has very quickly left an immesurable impact on me. 
                         </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p>
@@ -30,6 +30,4 @@
 <footer>
     <p>&copy; 2021 Mid-Term - Stardew Valley Site</p>
 </footer>
-
-</div>
 </html>
