--- a/Mid-Term/index.html
+++ b/Mid-Term/index.html
@@ -18,10 +18,10 @@
                     <a href="screenshots.html">Screenshots</a>
                     <a href="purchase.html">Buy Stardew Valley</a>
                     </nav>
-                    <main>
+                <main>
                         <h2>Welcome to Stardew Valley!</h2>
                         <p>Welcome to my Stardew Valley fansite, dedicated to the 2016 indie smash hit.</p>
-                        <img src="sdvw.png" alt= "Stardew Valley"> 
+                        <img src="sdvw.png" alt= "Stardew Valley"> </main>
                         
                     <p>I just discovered this game in the last month, but it has very quickly left an immesurable impact on me. 
                         </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p>
