--- a/Mid-Term/index.html
+++ b/Mid-Term/index.html
@@ -27,6 +27,5 @@
                         </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p>
                     
 
-<footer>
-    <p>&copy; 2021 Mid-Term - Stardew Valley Site</p>
-</footer>
+
+   <footer><p>&copy; 2021 Mid-Term - Stardew Valley Site</p></footer>
