--- a/Mid-Term/index.html
+++ b/Mid-Term/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href=css/styles.css>
         </head>
         <body>
-            <div id="container">
+            <div> id="container"></div>
             <header>
                 <img src="stardewvalleylogo.png" alt="Logo">
                 ></header>
