--- a/Mid-Term/about.html
+++ b/Mid-Term/about.html
@@ -9,9 +9,9 @@
         </head>
         <body>
             <div id="container">
-            <header>
-                <img src="stardewvalleylogo.png"
-                </header>
+            <header><img src="stardewvalleylogo.png" alt="Logo">
+            </header>
+                
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
@@ -22,7 +22,7 @@
                         <h2>About Stardew Valley</h2>
                         <p>Stardew Valley was initially released on Steam February 26, 2016. A farming simulator developed as a love letter to Nintendo's Harvest Moon franchise, It was developed by just one man, Eric Barone, over the course of four years.</p>
                         <p>Since it's release in 2016, the game has sold 10 million copies.</p>
-                        <img src="Screenshots/ericbarone2.jpg" width="900" height="600">
+                        <img src="Screenshots/ericbarone2.jpg" width="00" height="600">
                         
                     <footer><p>Above: The game's creator Eric Barone, better known by his online alias: "ConcernedApe"
                         </p></footer>
@@ -30,7 +30,4 @@
 </main>
 <footer>
     <p>&copy; 2021 Mid-Term - Stardew Valley Site</p>
-</footer>
-
-</div>
 </html>
