--- a/Mid-Term/purchase.html
+++ b/Mid-Term/purchase.html
@@ -11,8 +11,8 @@
             <div id="container">
             <header>
                 <img src="stardewvalleylogo.png" alt="Logo"
-            header>
-                <nav>
+            </header>
+                    <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="screenshots.html">Screenshots</a>
