--- a/Mid-Term/screenshots.html
+++ b/Mid-Term/screenshots.html
@@ -10,7 +10,7 @@
         <body>
             <div id="container">
             <header>
-                <img src="stardewvalleylogo.png"
+                <img src="stardewvalleylogo.png" alt="Logo">
                 </header>
                 <nav>
                     <a href="index.html">Home</a>
