--- a/Mid-Term/about.html
+++ b/Mid-Term/about.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href=css/styles.css>
         </head>
         <body>
-            <div id="container"></div>
+            <div id="container">
             <header><img src="stardewvalleylogo.png" alt="Logo">
             </header>
                 
@@ -17,6 +17,7 @@
                     <a href="about.html">About</a>
                     <a href="screenshots.html">Screenshots</a>
                     <a href="purchase.html">Buy Stardew Valley</a>
+                    <a href="reviews.html">Reviews</a>
                     </nav>
                     <main>
                         <h2>About Stardew Valley</h2>
@@ -28,4 +29,10 @@
                         </p></footer>
                     
 </main>
+<footer>
     <p>&copy; 2021 Mid-Term - Stardew Valley Site</p>
+</footer>
+</div>
+</body>
+
+</html>
