--- a/Mid-Term/reviews.html
+++ b/Mid-Term/reviews.html
@@ -10,7 +10,7 @@
         <body>
             <div id="container">
             <header>
-                <img src="stardewvalleylogo.png" alt="Logo">
+                <img src="stardewvalleylogo.png" alt="Farm">
                 </header>
                 <nav>
                     <a href="index.html">Home</a>
@@ -20,12 +20,13 @@
                     <a href="reviews.html">Reviews</a>
                     </nav>
                 <main>
-                        <h2>Welcome to Stardew Valley!</h2>
-                        <p>Welcome to my Stardew Valley fansite, dedicated to the 2016 indie smash hit.</p>
-                        <img src="sdvw.png" alt= "Stardew Valley"> </main>
+                        <h2>Stardew Valley Reviews</h2>
+                        <p>"Stardew Valley beautifully combines farm simulation with RPG elements to create an intriguing, absorbing rural world. - IGN.com”</p>
                         
-                    <p>I just discovered this game in the last month, but it has very quickly left an immesurable impact on me. 
-                        </p> <p>I hope you enjoy learning a small bit about the game here, and hopefully check it out, yourself.</p>
+                        <p>"Stardew Valley will make you a happier person.” - Gamespot.com</p>
+
+                        <p>"Stardew Valley, above all, expertly explores the connection that someone can have with their environment, their work and the people around them." - Polygon.com</p>
+                        <img src="Screenshots/sdvr.jpg" alt= "Stardew Valley"> </main>
                     
 
 
