--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Title</title>
         <Link rel="stylesheet" href="css/normalize.css">
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="css/styles.css">
             </head>
             <body>
             <div id="container">
