--- a/Lab 6/gallery.html
+++ b/Lab 6/gallery.html
@@ -22,9 +22,9 @@
                 </nav>
                 <main>
                     <section>
-                <img src="images/chattstate4.jpg">
-                <img src="images/chattstate7.jpg">
-                <img src="images/chattstate6.jpg">
+                <img src="images/chattstate4.jpg" alt="chattstate1">
+                <img src="images/chattstate7.jpg" alt="chattstate2">
+                <img src="images/chattstate6.jpg" alt="chattstate3">
                </section> 
             </main>
                 
