--- a/Lab 7/css/index.html
+++ b/Lab 7/css/index.html
@@ -67,9 +67,9 @@
         </header>
         <main>
             <h2>Welcome to Audio, Video and Table Site</h2>
-            <p></p>
+            <p>Throwing it back to my Lab 2 Coffee Site, here are some coffee videos</p>
 
-            <p></p>
+            <p>You'll also find a song by one of my favorite artists linked below, and one of my favorite moments from a game released last year: The Last of Us Part II.</p>
 
             <h3>Table</h3>
 
