--- a/Lab 7/index.html
+++ b/Lab 7/index.html
@@ -118,14 +118,14 @@
 
             <h3>Videos</h3>
             <video controls>
-                <source src="videos/Coffee - 45358.mp4" type="video/mp4"> </video>
+                <source src="css/videos/Drink - 63201.mp4" type="video/mp4"> </video>
                     <video controls>
-                    <source src="videos/Coffee - 46989.mp4" type="video/mp4">
+                    <source src="css/videos/Coffee - 45358.mp4" type="video/mp4">
             </video>
 
             <h3>Audio</h3>
             <audio controls>
-                <source src="audio/19th Floor - Bobby Richards.mp3" type="audio/mp3">
+                <source src="css/audio/Awful - josh pan.mp3" type="audio/mp3">
                 </audio>
 
                 <h3>Embedded Audio and Video</h3>
