--- a/Lab 7/index.html
+++ b/Lab 7/index.html
@@ -118,20 +118,20 @@
 
             <h3>Videos</h3>
             <video controls>
-                <source src="css/videos/Drink - 63201.mp4" type="video/mp4"> </video>
+                <source src="css/videos/drink.mp4" type="video/mp4"> </video>
                     <video controls>
-                    <source src="css/videos/Coffee - 45358.mp4" type="video/mp4">
+                    <source src="css/videos/coffee.mp4" type="video/mp4">
             </video>
 
             <h3>Audio</h3>
             <audio controls>
-                <source src="css/audio/Awful - josh pan.mp3" type="audio/mp3">
+                <source src="css/audio/josh.mp3" type="audio/mp3">
                 </audio>
 
                 <h3>Embedded Audio and Video</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xNzRdQShjNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/21061787&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/drcthulhu" title="DrCthulhu" target="_blank" style="color: #cccccc; text-decoration: none;">DrCthulhu</a> · <a href="https://soundcloud.com/drcthulhu/bonnie-prince-billy-i-see-a" title="Bonnie &quot;Prince&quot; Billy &quot;I See A Darkness&quot;" target="_blank" style="color: #cccccc; text-decoration: none;">Bonnie &quot;Prince&quot; Billy &quot;I See A Darkness&quot;</a></div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xNzRdQShjNM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100" height="300" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/21061787&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/drcthulhu" title="DrCthulhu" target="_blank" style="color: #cccccc; text-decoration: none;">DrCthulhu</a> · <a href="https://soundcloud.com/drcthulhu/bonnie-prince-billy-i-see-a" title="Bonnie &quot;Prince&quot; Billy &quot;I See A Darkness&quot;" target="_blank" style="color: #cccccc; text-decoration: none;">Bonnie &quot;Prince&quot; Billy &quot;I See A Darkness&quot;</a></div>
         </main>
         <footer>&copy; 2021 Lab 7 - Audio, Video and Table Site</footer>
         <script src="zenscroll-min.js"></script>
