--- a/Lab 8/index.html
+++ b/Lab 8/index.html
@@ -107,7 +107,7 @@
                     <p> You can Purchase Age of Empires II: Definitive Edition <a href= "https://store.steampowered.com/app/813780/Age_of_Empires_II_Definitive_Edition/" target=_blank>here</a>
 
                     <a href="images/hero-logo-age2_ea9d88d4.png" data-lightbox="image1" data-title="AOE2">
-                      <img src="images/hero-logo-age2_ea9d88d4.png" alt="AOE Logo"> 
+                      <img src="images/hero-logo-age2_ea9d88d4.png" alt="AOE Logo"></a>
                       <a class="button" href="#top">Back to the Top</a>
                      
                 </article>
