Final, In Progress

--- a/Final/photos.html
+++ b/Final/photos.html
@@ -46,7 +46,7 @@
                     <a class="button" href="about.html">About</a>
                     <a class="button" href="photos.html">Photos</a>
                     <a class="button" href="albums.html">Browse Albums</a>
-                    <a class="button" href="reviews.html">Reviews</a>
+                    <a class="button" href="videos.html">Videos</a>
                 </header>
                 
                 
