--- a/Final/about.html
+++ b/Final/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bonnie "Prince" Billy Fansite</title>
+        <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">  
         <link rel="stylesheet" href=normalize.css>
         <link rel="stylesheet" href=css/styles.css>
         <link rel="stylesheet" href="dist/slicknav.css">
@@ -39,40 +40,33 @@
                     <a class="button" href="videos.html">Videos</a>
                 </header>
                 <main>
-                    <img src="Images/bonniebaw2.jpg" alt="Logo" class="center">
+                    <a href="https://www.dragcity.com/artists/bonnie-prince-billy"> <img src="Images/bonniebaw2.jpg" alt="Logo" style="float: right; margin-left: 5px; margin-bottom: 5px;"></a>
                 <p>Bonnie "Prince" Billy (real name Joseph Will Oldham) is an American singer-songwriter, known for his "do-it-yourself punk aesthetic and blunt honesty".</p><br>
                 <p>His music has been likened to Americana, country, indie rock, punk, and folk.</p><br>
                 <p>Oldham adopted the 'Bonnie "Prince" Billy' moniker in 1998, drawing inspiration from many different sources:</p>
                 <p>"The name has so many different references that it could almost have a life of its own. Bonnie Prince Charlie has such a beautiful ring to it, and I was very conscious of appropriating that mellifluous sound.</p> 
                 <p>And I was also thinking about the name Nat King Cole. But it wasn't until later, and this may have been subconscious, that I remembered that Billy the Kid was William Bonney or Billy Bonney".</p>
                 </main>
-                
+                <br><br><br><br><br><br><br><br>
                 <div id="accordion">
                     <h3 id="main">Early Life</h3>
                     <div>
                       <p>
-                      Farms can now replenish automatically, unlike the original release.
+                      Oldham was born on January 15, 1970, in Louisville, Kentucky. His mother, Joanne Lei Will Tafel Oldham, was a teacher and artist. His father, Joseph Collins Oldham, was an attorney and photographer. Oldham graduated from the J. Graham Brown School in 1988. He attended Brown University sporadically while pursuing a career as an actor, and living between Brooklyn, Los Angeles, and Southern Indiana. He began making music during this time, initially as a project for his professor Jeff Todd Titon, an ethnomusicologist at Brown University.
                       </p>
                     </div>
                     <h3>Career</h3>
                     <div>
                       <p>
-                      Originally introduced in Age of Empires III and Age of Mythology, players can now zoom in/zoom out of the game world to get a much better layout of the land than they could in the original AOEII.
+                        Oldham is known for his "do-it-yourself punk aesthetic and blunt honesty," and his music has been likened to Americana, folk, roots, country, punk, and indie rock. He has been called an "Appalachian post-punk solipsist", with a voice that has been described as "a fragile sort-of warble frittering around haunted melodies in the American folk or country tradition."
                       </p>
-                    </div>
-                    <h3 id="feature1">New Spectator Mode</h3>
-                    <div>
-                      <p>
-                      Spectate other player's battles online for the first time in AOEII.
-                      </p>
-                      <ul>
-
-                      </ul>
                     </div>
                     <h3>Critical Reception</h3>
                     <div>
                       <p>
-                        The original AI had to cheat to be competitive, while the new AI is advanced enough to not require any cheating. When the old and new AIs were pitted against each other in a test, the new one easily defeated the old one.</p>
+                        Some of his albums, such as There Is No-One What Will Take Care of You (1993), Viva Last Blues (1995), and I See a Darkness (1999) have appeared on greatest albums lists.<br>
+
+                        Johnny Cash recorded a version of "I See a Darkness" on his American Recordings disc, American III: Solitary Man (2000). Oldham provided backing vocals. Marianne Faithfull included Oldham's "A King at Night" on her 2003 Kissin Time tour. Steve Adey also covered "I See a Darkness" on his 2006 LP All Things Real. Mark Kozelek recorded a version of Oldham's "New Partner" on his 2008 disc, The Finally LP. Katatonia covered "Oh How I Enjoy the Light" on their 2001 EP Tonight's Music.<br> In 2009 Mark Lanegan and Soulsavers recorded a cover version of "You Will Miss Me When I Burn". The release is a split single, backed with the Lanegan penned "Sunrise" featuring vocals by Oldham. In 2011, Deer Tick's cover of Oldham's song "Death to Everyone" appeared in an episode of Hell On Wheels. Cadaverous Condition covered "Black" on their to the Night Sky album (2006). </p>
                     
                     </div>
                   </div>
