--- a/Final/photos.html
+++ b/Final/photos.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bonnie "Prince" Billy Fansite</title>
+        <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">  
         <link rel="stylesheet" href=normalize.css>
         <link rel="stylesheet" href=css/styles.css>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
