--- a/Final/videos.html
+++ b/Final/videos.html
@@ -6,6 +6,7 @@
         <title>Bonnie "Prince" Billy Fansite</title>
         <link rel="stylesheet" href=normalize.css>
         <link rel="stylesheet" href=css/styles.css>
+        <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
